--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login1.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="login1.css" />
+  <title>Login</title>
 </head>
 <body>
-    <div class="wrapper">
-        <form action="">
+  <div class="wrapper">
+    <form action="../api/login.php" method="POST">
+      <h1>Log In</h1>
 
-    <h1>Log In</h1>
+      <!-- Email -->
+      <div class="input-box">
+        <input type="text" name="email" placeholder="Email" required />
+        <i class='bx bxs-user'></i>
+      </div>
 
-    <!--email-->
-    <div class="input-box">
-    <input type="text" placeholder="Username" required>
-    <i class='bx bxs-user'></i>
-    </div>
+      <!-- Password -->
+      <div class="input-box">
+        <input type="password" name="password" placeholder="Password" required />
+        <i class='bx bxs-lock-alt'></i>
+      </div>
 
-    <!--password-->
-    <div class="input-box">
-    <input type="password" placeholder="Password" required>
-    <i class='bx bxs-lock-alt'></i>
-    </div>
+      <!-- Remember Me -->
+      <div class="remember-forgot">
+        <label><input type="checkbox" name="remember" /> Remember me</label>
+        <a href="#forgot-password">Forgot Password</a>
+      </div>
 
-    <!--remember_forgot-->
-    <div class="remember-forgot">
-    <label><input type="checkbox">Remember me</label>
-    <a href="#forgot-password">Forgot Password</a>
-    </div>
+      <button type="submit" class="btn">Login</button>
 
-    <button type="submit" class="btn">Login</button>
-    <div class="register-link">
-        <p>Don't have an account? <a href="signup.html"> Register</a></p>
-    </div>
+      <div class="register-link">
+        <p>Don't have an account? <a href="signup.html">Register</a></p>
+      </div>
     </form>
+  </div>
 </body>
 </html>
