--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="wrapper">
-    <form action="">
+    <form onsubmit="redirectToLogin(event)">
       <h1>Sign Up</h1>
       <p>Please fill in the form to create an account</p>
 
@@ -39,7 +39,17 @@
       <button type="submit" class="signup">Sign Up</button>
     </form>
   </div>
-  
+
+  <script>
+    function redirectToLogin(event) {
+      event.preventDefault(); // prevent form from submitting normally
+
+      // Optional: Add validation logic here if needed
+
+      // Redirect to login page
+      window.location.href = "login.html";
+    }
+  </script>
 </body>
 
 </html>
